fix(card): fix dark theme card, light bg contrast

--- a/src/patternfly/components/Card/card.scss
+++ b/src/patternfly/components/Card/card.scss
@@ -386,3 +386,10 @@
     font-weight: var(--pf-global--FontWeight--normal);
   }
 }
+
+// stylelint-disable no-invalid-position-at-import-rule
+@import "themes/dark/card";
+
+@include pf-theme-dark {
+  @include pf-theme-dark-card;
+}
